Update Readme for WNV project

--- a/Capstone_WestNileVirus/notebook/WestNileVirus_Wrangling.ipynb
+++ b/Capstone_WestNileVirus/notebook/WestNileVirus_Wrangling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "454a7668",
+   "id": "9df7a42a",
    "metadata": {},
    "source": [
     "# Capstone: West Nile Virus\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d61e942f",
+   "id": "d17546d4",
    "metadata": {},
    "source": [
     "# Import packages and define functions"
@@ -27,8 +27,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "da616226",
+   "execution_count": 1,
+   "id": "e7cd7971",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a0d9907",
+   "id": "790753bb",
    "metadata": {},
    "source": [
     "# Data Collection and Wrangling"
@@ -55,18 +55,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "98a4dadd",
+   "execution_count": 2,
+   "id": "9b9746ae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "datadir = '../datasets'\n",
-    "datadir_pr = '../datasets/processed'  # directory where the cleaned datasets are stored"
+    "datadir    = '../datasets'\n",
+    "datadir_pr = '../datasets/processed'  # directory where the cleaned datasets are stored\n",
+    "figdir     = '../output/figures'"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d39b35fa",
+   "id": "9cfbf0ef",
    "metadata": {},
    "source": [
     "## Datasets consist of Main, Spray, Weather, Map data:\n",
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bca6c48d",
+   "id": "f04a9fa7",
    "metadata": {},
    "source": [
     "### Load and check (\\& clean) Main dataset\n",
@@ -98,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f00d9c3e",
+   "id": "ac5fd04e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f526bb13",
+   "id": "51140f98",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f54e42ff",
+   "id": "28eb83b1",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "15c92355",
+   "id": "f5dd1815",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bc172c4",
+   "id": "91e8943b",
    "metadata": {},
    "source": [
     "> There is no NaN (null) values in the training datasets"
@@ -358,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4acdb3e1",
+   "id": "f70838b5",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "698dcfc7",
+   "id": "d4baa85d",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e67e6f5",
+   "id": "41e6a3d5",
    "metadata": {},
    "source": [
     "<div class='alert alert-warning'> Note:\n",
@@ -531,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3e8c9b0e",
+   "id": "f0779853",
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d21ad3a9",
+   "id": "3924cd61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6cc10e7f",
+   "id": "f33436d7",
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c85eb1e7",
+   "id": "0805c444",
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "15758e84",
+   "id": "54f90716",
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +803,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f39c40b",
+   "id": "311ef513",
    "metadata": {},
    "source": [
     "> There is no NaN (null) values in the test datasets"
@@ -811,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "52fe0620",
+   "id": "9ebbdab1",
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c25dcbc7",
+   "id": "f5936ffb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "9fd15ea9",
+   "id": "4b19515d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,7 +961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "584c6bd6",
+   "id": "e376e304",
    "metadata": {},
    "source": [
     "### Load and check (& clean) Weather dataset\n",
@@ -971,8 +972,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "id": "886bb022",
+   "execution_count": 17,
+   "id": "ccad2987",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,8 +983,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "id": "2a2da6e8",
+   "execution_count": 18,
+   "id": "2b1d14e2",
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1209,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1219,8 +1220,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "id": "ffc53d96",
+   "execution_count": 19,
+   "id": "41fe47ec",
    "metadata": {},
    "outputs": [
     {
@@ -1264,7 +1265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e80f2b98",
+   "id": "c0f707da",
    "metadata": {},
    "source": [
     "<div class='alert alert-info'>\n",
@@ -1274,8 +1275,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "id": "ce043079",
+   "execution_count": 20,
+   "id": "d93d20d1",
    "metadata": {},
    "outputs": [
     {
@@ -1344,7 +1345,7 @@
        "Name: Tavg, dtype: int64"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1355,8 +1356,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "id": "cbb3fee0",
+   "execution_count": 21,
+   "id": "67fa598b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1366,8 +1367,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "id": "49ed376b",
+   "execution_count": 22,
+   "id": "6122fd9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1378,8 +1379,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "id": "eb56395b",
+   "execution_count": 23,
+   "id": "07e7434d",
    "metadata": {},
    "outputs": [
     {
@@ -1550,7 +1551,7 @@
        "[3 rows x 21 columns]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1561,7 +1562,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81c1d128",
+   "id": "c6475df0",
    "metadata": {},
    "source": [
     "<div class='alert alert-info'>\n",
@@ -1571,8 +1572,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "id": "445ce6e0",
+   "execution_count": 24,
+   "id": "63d0ce09",
    "metadata": {},
    "outputs": [
     {
@@ -1616,8 +1617,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "id": "b506307c",
+   "execution_count": 25,
+   "id": "abfc2c4f",
    "metadata": {},
    "outputs": [
     {
@@ -1657,8 +1658,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "id": "ddff8ddf",
+   "execution_count": 26,
+   "id": "cbfdbdeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1671,8 +1672,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "id": "d7172511",
+   "execution_count": 27,
+   "id": "559eafbf",
    "metadata": {},
    "outputs": [
     {
@@ -1708,8 +1709,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "id": "b3030409",
+   "execution_count": 28,
+   "id": "2ccbd43a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1720,8 +1721,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "id": "091d8d88",
+   "execution_count": 29,
+   "id": "9594019c",
    "metadata": {},
    "outputs": [
     {
@@ -1935,7 +1936,7 @@
        "AvgSpeed       10.40    26.30  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1946,8 +1947,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "id": "b95fee97",
+   "execution_count": 30,
+   "id": "cfd23f46",
    "metadata": {},
    "outputs": [
     {
@@ -2146,7 +2147,7 @@
        "AvgSpeed     1469.0   8.590129  3.107809   1.70   6.30   8.10  10.400  22.60"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2157,7 +2158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6971afe7",
+   "id": "605c70af",
    "metadata": {},
    "source": [
     "> - `Water1` is entirely NaNs for both Station1 and Station2\n",
@@ -2167,8 +2168,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "id": "ca7ae153",
+   "execution_count": 31,
+   "id": "15572bed",
    "metadata": {},
    "outputs": [
     {
@@ -2212,8 +2213,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "id": "a3c0de12",
+   "execution_count": 32,
+   "id": "4b3df40f",
    "metadata": {},
    "outputs": [
     {
@@ -2236,8 +2237,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
-   "id": "81e37c70",
+   "execution_count": 33,
+   "id": "cba3ace2",
    "metadata": {},
    "outputs": [
     {
@@ -2282,8 +2283,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "id": "9fd7933a",
+   "execution_count": 34,
+   "id": "30e7c625",
    "metadata": {},
    "outputs": [
     {
@@ -2306,8 +2307,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "id": "604ea466",
+   "execution_count": 35,
+   "id": "2fc8e1b8",
    "metadata": {},
    "outputs": [
     {
@@ -2355,8 +2356,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
-   "id": "e394e371",
+   "execution_count": 36,
+   "id": "e938c7d5",
    "metadata": {},
    "outputs": [
     {
@@ -2402,8 +2403,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
-   "id": "ae092a6a",
+   "execution_count": 37,
+   "id": "87cb0fcc",
    "metadata": {},
    "outputs": [
     {
@@ -2611,7 +2612,7 @@
        "2007-05-03     30.12         11.7          7      11.9  "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2622,7 +2623,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "4944d343",
+   "id": "9bfc2413",
    "metadata": {},
    "source": [
     "''' \n",
@@ -2638,8 +2639,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "id": "8a426e36",
+   "execution_count": 38,
+   "id": "742dc8ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2650,7 +2651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "286ff254",
+   "id": "651dfeb7",
    "metadata": {},
    "source": [
     "### Load and check (& clean) Spray dataset\n",
@@ -2661,8 +2662,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "f86a98c6",
+   "execution_count": 39,
+   "id": "c3b885dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2671,8 +2672,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "7b754cb9",
+   "execution_count": 40,
+   "id": "cc370f5a",
    "metadata": {},
    "outputs": [
     {
@@ -2751,7 +2752,7 @@
        "4  2011-08-29  6:57:38 PM  42.390410 -88.088858"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2762,8 +2763,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "a4cc9a67",
+   "execution_count": 41,
+   "id": "28ce20f7",
    "metadata": {},
    "outputs": [
     {
@@ -2790,7 +2791,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c67a86d",
+   "id": "0e691002",
    "metadata": {},
    "source": [
     "<div class='alert alert-info'>\n",
@@ -2800,8 +2801,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "2b2fed7d",
+   "execution_count": 42,
+   "id": "0ca320a5",
    "metadata": {},
    "outputs": [
     {
@@ -2931,7 +2932,7 @@
        "[584 rows x 4 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2942,7 +2943,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e57f848",
+   "id": "149a341c",
    "metadata": {},
    "source": [
     "> It turns out that there is a chunk of place that has NaN values in Time"
@@ -2950,8 +2951,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "e835094c",
+   "execution_count": 43,
+   "id": "3a40eee7",
    "metadata": {},
    "outputs": [
     {
@@ -3081,7 +3082,7 @@
        "[590 rows x 4 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3093,8 +3094,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "dbf007ff",
+   "execution_count": 44,
+   "id": "d8d4d7e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3104,8 +3105,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "24b4b9a8",
+   "execution_count": 45,
+   "id": "4e47f94a",
    "metadata": {},
    "outputs": [
     {
@@ -3235,7 +3236,7 @@
        "[590 rows x 4 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3246,8 +3247,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "26d0769f",
+   "execution_count": 46,
+   "id": "eeb27627",
    "metadata": {},
    "outputs": [
     {
@@ -3274,8 +3275,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "31bb831c",
+   "execution_count": 47,
+   "id": "90aaa5f6",
    "metadata": {},
    "outputs": [
     {
@@ -3362,7 +3363,7 @@
        "2011-08-29 18:57:38  2011-08-29  6:57:38 PM  42.390410 -88.088858"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3383,8 +3384,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "d3177113",
+   "execution_count": 48,
+   "id": "53ec97ae",
    "metadata": {},
    "outputs": [
     {
@@ -3457,7 +3458,7 @@
        "2011-08-29 18:57:38  42.390410 -88.088858"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3472,8 +3473,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "ff1a970b",
+   "execution_count": 49,
+   "id": "a2166b70",
    "metadata": {},
    "outputs": [
     {
@@ -3498,8 +3499,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "6e7f3aa2",
+   "execution_count": 50,
+   "id": "ea2f9051",
    "metadata": {},
    "outputs": [
     {
@@ -3517,8 +3518,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "08b5e5bd",
+   "execution_count": 51,
+   "id": "d620ec7c",
    "metadata": {},
    "outputs": [
     {
@@ -3630,7 +3631,7 @@
        "[541 rows x 2 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3642,8 +3643,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "e0abb8a4",
+   "execution_count": 52,
+   "id": "8313a55c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3654,8 +3655,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "2a98366f",
+   "execution_count": 53,
+   "id": "36c832c5",
    "metadata": {},
    "outputs": [
     {
@@ -3680,8 +3681,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "787c04a1",
+   "execution_count": 54,
+   "id": "27147ef2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3693,8 +3694,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "2a41bc3c",
+   "execution_count": 55,
+   "id": "9f982c1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3705,7 +3706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a83ef8b",
+   "id": "7a4821f7",
    "metadata": {},
    "source": [
     "### Load the map data and check the locations of trapped mosquitos"
@@ -3713,8 +3714,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "d53fcf66",
+   "execution_count": 56,
+   "id": "6e9cb76f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3727,8 +3728,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "0c7bc63f",
+   "execution_count": 57,
+   "id": "6b16eb34",
    "metadata": {},
    "outputs": [
     {
