submit take home challenge1

--- a/Capstone_WebTraffic/notebook/WebTraffic_Preprocess_Model.ipynb
+++ b/Capstone_WebTraffic/notebook/WebTraffic_Preprocess_Model.ipynb
@@ -90,7 +90,7 @@
    "source": [
     "## Datasets consist of train and key:\n",
     "- **train.csv**\n",
-    "    - 145k rows each of wich represent a different Wikipedia page\n",
+    "    - 145k rows each of which represent a different Wikipedia page\n",
     "    - 804 columns: article + daily traffic on that particular Wikipedia page (803 days: 2015-07-01 to 2017-09-10)\n",
     "    - The first column contains the name of the page which includes \n",
     "        - the language of the page (e.g., English en, Spanish es, Chinese zh)\n",
