--- a/Capstone_WestNileVirus/notebook/WestNileVirus_Preprocess.ipynb
+++ b/Capstone_WestNileVirus/notebook/WestNileVirus_Preprocess.ipynb
@@ -4256,7 +4256,7 @@
    "source": [
     "# Multi-Collinearity\n",
     "- eliminate the features in high correlation among themselves. \n",
-    "- **Variance Inflaction Factor (VIF)**: technique that detects Multicollinearity\n",
+    "- **Variance Inflation Factor (VIF)**: technique that detects Multicollinearity\n",
     "- reference: https://www.geeksforgeeks.org/detecting-multicollinearity-with-vif-python/"
    ]
   },
