--- a/Mini_Project/Relax_Inc_Challenge/reference/Relax-Inc-Challenge-bryan/Relax Challenge.ipynb
+++ b/Mini_Project/Relax_Inc_Challenge/reference/Relax-Inc-Challenge-bryan/Relax Challenge.ipynb
@@ -72,9 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -956,9 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1018,9 +1014,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1272,9 +1266,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = users.drop(['object_id', 'creation_time', 'name', \n",
@@ -1287,9 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1452,9 +1442,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1848,7 +1836,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1862,9 +1850,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
